# libdwg-0.6

./: AUTHORS  ChangeLog  LEGUMIN  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.ac
check/: Makefile.am  Makefile.in  alive.test  load_free.c
doc/: Makefile.am  Makefile.in  dwg-dump.1  dwg-dxf.1  libdwg.dox
programs/: Makefile.am  Makefile.in  dump_entity_handle.h  dump_entity_handle.in.c  dump_objects.in.c  dump_variables.in.c  dwg-dump.c  dwg-dxf.c  dwg-dxf.h  dwg-preview.c  dxf_object.c
src/: Makefile.am  Makefile.in  bits.c  bits.h  config.h.in  decode.c  decode.h  decode_r2000.c  decode_r2000.h  decode_r2004.c  decode_r2004.h  dwg.c  dwg.h  dwg_entity_handle.in.c  dwg_entity_handle.spe.c  dwg_macro.h  dwg_object.in.c  dwg_object.spe.c  dwg_object_free.in.c  dwg_variables.in.c  dwg_variables.spe.c  dwg_variables_free.in.c  logging.c  logging.h  object.c  object.h  variables.c  variables.h
